Add twitter bootstrap, jquery-ui, simple-form gems.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,26 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+    <header class="navbar navbar-static-top navbar-inverse">
+        <nav class="navbar-inner">
+            <div class="container">
+                <%= render 'layouts/navigation' %>
+            </div>
+        </nav>
+    </header>
+    <div id="main" role="main">
+        <div class="container">
+            <div class="content">
+                <div class="row">
+                    <div class="span12">
+                        <%= render 'layouts/messages' %>
+                        <%= yield %>
+                    </div>
+                </div>
+                <footer>
+                </footer>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
