--- a/app/views/queries/_results_table.html.erb
+++ b/app/views/queries/_results_table.html.erb
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container results">
     <% @res['response']['listings'].each do |listing| %>
-        <div class="well">
+        <div class="well result">
             <h4><%= listing['title'] %> -- Price: £<%= listing['price'] %></h4>
             <p><%= listing['summary'] %></p>
             <div class="row-fluid">
