--- a/app/views/queries/results.html.erb
+++ b/app/views/queries/results.html.erb
@@ -1,3 +1,33 @@
 <h1>Results</h1>
 
-<%= render 'query_results_table' %>
+<%= render 'results_table' %>
+
+<ul class="pager">
+
+    <% if(@res['request']['page'].to_i > 1) %>
+        <li class="previous">
+    <% else %>
+        <li class="previous disabled">
+    <% end %>
+    <%= link_to "← Previous", "previous_page" %>
+    </li>
+    <% if(@res['request']['page'].to_i < @res['response']['total_pages']) %>
+        <li class="next">
+    <% else %>
+        <li class="next disabled">
+    <% end %>
+        <%= link_to "Next →", "next_page" %>
+    </li>
+</ul>
+
+<script>
+    $('.results').infinitescroll({
+
+        navSelector  : "div.navigation",
+        // selector for the paged navigation (it will be hidden)
+        nextSelector : "ul.li:next a",
+        // selector for the NEXT link (to page 2)
+        itemSelector : "div.result"
+        // selector for all items you'll retrieve
+    });
+</script>
